infrastructure/manifests/hpa-ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  namespace: default
  labels:
    app: ollama
    environment: production
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
            #nvidia.com/gpu: 1
          limits:
            cpu: "650m"
            memory: "2Gi"
            #nvidia.com/gpu: 1
        volumeMounts:
        - name: ollama-data
          mountPath: /root/.ollama
      volumes:
      - name: ollama-data
        persistentVolumeClaim:
          claimName: ollama-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: ollama
  type: NodePort
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
      nodePort: 30000
